# dimgin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp
src/: t.cpp
tests/: array_tests.cpp  test.cpp
